# clone-test

./: Cargo.toml  README.md  default.nix  package-lock.json  package.json
dnas/clones/workdir/: dna.yaml
dnas/clones/zomes/coordinator/clones/: Cargo.toml
dnas/clones/zomes/integrity/clones/: Cargo.toml
tests/: package.json
ui/: web-dev-server.config.mjs
ui/src/: holochain-app.ts
workdir/: happ.yaml  web-happ.yaml
