[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.1"
hdk = "0.0.162"
serde = "1"

[workspace.dependencies.clones]
path = "dnas/clones/zomes/coordinator/clones"

[workspace.dependencies.clones_integrity]
path = "dnas/clones/zomes/integrity/clones"
